Update index links

--- a/services/gmn_data_portal/templates/index.html
+++ b/services/gmn_data_portal/templates/index.html
@@ -38,13 +38,13 @@
                     <h2 style="font-weight: bold">Users</h2>
                     <p>View data, live meteor map, and more.</p>
                     <p><a class="btn btn-secondary"
-                          href="http://0.0.0.0:8001/gmn_data_store/meteor_summary"
+                          href="/gmn_data_store/meteor_summary"
                           role="button">View meteor data &raquo;</a></p>
                     <p><a class="btn btn-secondary"
-                          href="http://0.0.0.0:8001/gmn_data_store"
+                          href="/gmn_data_store"
                           role="button">View all data &raquo;</a></p>
                     <p><a class="btn btn-secondary"
-                          href="http://0.0.0.0:8001/live-meteor-map"
+                          href="/live-meteor-map"
                           role="button">Live
                         meteor map &raquo;</a></p>
 
@@ -56,7 +56,7 @@
                           href="https://gmn-data-endpoints.readthedocs.io/en/latest/rest_api"
                           role="button">REST API &raquo;</a></p>
                     <p><a class="btn btn-secondary"
-                          href="https://gmn-python-api.readthedocs.io/en/latest/"
+                          href="https://github.com/gmn-data-platform/gmn-data-endpoints/blob/main/gmn_rest_api_docs.md"
                           role="button">Python API &raquo;</a></p>
                     <p><a class="btn btn-secondary"
                           href="https://colab.research.google.com/github/gmn-data-platform/gmn-data-endpoints/blob/29f8c820bda950bf10d94e93c202857d73566e20/gmn_data_analysis_template.ipynb"
