--- a/services/gmn_data_portal/templates/index.html
+++ b/services/gmn_data_portal/templates/index.html
@@ -36,7 +36,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <h2 style="font-weight: bold">Users</h2>
-                    <p>View data, live meteor map, and more.</p>
+                    <p>View data, RSS feed and more.</p>
                     <p><a class="btn btn-secondary"
                           href="/gmn_data_store/meteor_summary"
                           role="button">View meteor data &raquo;</a></p>
@@ -44,10 +44,8 @@
                           href="/gmn_data_store"
                           role="button">View all data &raquo;</a></p>
                     <p><a class="btn btn-secondary"
-                          href="/live-meteor-map"
-                          role="button">Live
-                        meteor map &raquo;</a></p>
-
+                          href="/gmn_data_store/meteor_summary_feed.atom"
+                          role="button">Atom feed &raquo;</a></p>
                 </div>
                 <div class="col-md-4">
                     <h2 style="font-weight: bold">Developers</h2>
