Styling and link updates

--- a/services/gmn_data_portal/templates/index.html
+++ b/services/gmn_data_portal/templates/index.html
@@ -28,7 +28,8 @@
         <div class="col-md-6" style="margin: auto; padding: 0; margin-bottom: 20px">
             <img width="100%"
                  src="https://i2.wp.com/globalmeteornetwork.org/wordpress/wp-content/uploads/2018/11/FF_HR000A_20181117_031502_242_0860672fits_maxpixel.jpg?fit=1200%2C675&ssl=1"
-                 alt="Meteor image">
+                 alt="Meteor image"
+                 style="height: 400px; object-fit: cover;">
         </div>
     </div>
     <div class="row">
@@ -51,10 +52,10 @@
                     <h2 style="font-weight: bold">Developers</h2>
                     <p>REST API, Python API, Google Colab + D-Tale.</p>
                     <p><a class="btn btn-secondary"
-                          href="https://gmn-data-endpoints.readthedocs.io/en/latest/rest_api"
+                          href="https://github.com/gmn-data-platform/gmn-data-endpoints/blob/main/gmn_rest_api_docs.md"
                           role="button">REST API &raquo;</a></p>
                     <p><a class="btn btn-secondary"
-                          href="https://github.com/gmn-data-platform/gmn-data-endpoints/blob/main/gmn_rest_api_docs.md"
+                          href="https://gmn-python-api.readthedocs.io/en/latest/"
                           role="button">Python API &raquo;</a></p>
                     <p><a class="btn btn-secondary"
                           href="https://colab.research.google.com/github/gmn-data-platform/gmn-data-endpoints/blob/29f8c820bda950bf10d94e93c202857d73566e20/gmn_data_analysis_template.ipynb"
