--- a/services/gmn_data_portal/templates/index.html
+++ b/services/gmn_data_portal/templates/index.html
@@ -37,7 +37,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <h2 style="font-weight: bold">Users</h2>
-                    <p>View data, RSS feed and more.</p>
+                    <p>View data, Atom feed and more.</p>
                     <p><a class="btn btn-secondary"
                           href="/gmn_data_store/meteor_summary"
                           role="button">View meteor data &raquo;</a></p>
